<resources>
    <string name="app_name">MusicPlayerLite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown" translatable="false"><![CDATA[<unknown>]]></string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="channel_name">Notification channel</string>
    <string name="channel_description">Notification channel music</string>
    <string name="your_playlist">Your PlayList</string>
    <string name="like_songs">Like Songs</string>
    <string name="followed_artist">Followed Artist</string>
    <string name="history">History</string>
    <string name="albums">Albums</string>
    <string name="video">Video</string>
    <string name="playlist">Playlist</string>
    <string name="artist">Artist</string>
    <string name="your_activities">Your activities</string>
    <string name="your_download">Your Download</string>
    <string name="my_music">My Music</string>
    <string name="number_albums">%d Albums</string>
    <string name="number_artist">%d Artists</string>
    <string name="number_song">%d Songs</string>
    <string name="next">Next</string>
    <string name="your_albums">Your Albums</string>
    <string name="your_artist">Your Artist</string>
    <string name="artist_song">Artists Song</string>
    <string name="albums_song">Alums Song</string>
    <string name="play_list_song">Playlist Song</string>
    <string name="permission_audio_description">By granting access to audio, you\'ll unlock a world of vibrant music and enjoy the best music experiences</string>
    <string name="get_songs">Get Songs</string>
    <string name="no_songs_yet">No songs yet</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>

</resources>