<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:textSize="16sp"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/your_download"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_folder"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_disc_music"
                app:srcCompat="@drawable/ic_album"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/albums"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvAlbumCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:fontFamily="@font/gilroy_regular"
                tools:text="10 Albums"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_folder"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_video_v2"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/video"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvVideoCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:fontFamily="@font/gilroy_regular"
                tools:text="20 Videos"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_folder"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_song_home"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/playlist"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvPlaylistCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:fontFamily="@font/gilroy_regular"
                tools:text="20 Videos"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_folder"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_singer"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/artist"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvArtistCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:fontFamily="@font/gilroy_regular"
                tools:text="20 Videos"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</GridLayout>
